src/_assets/scss/_tdevs_custom.scss
.td-alert-banner {
  display: block;
  background-color: rgb(238, 92, 83);
  text-align: center;
  font-size: 24px;
  padding: 16px;
  width: 100%;
  border-radius: 10px;
  cursor: pointer;
  transition: 0.5s background-color;
  text-decoration: none;
  border: none;
  color: white !important;
  &:hover {
    color: white;
    text-decoration: none;
    border: none;
    background-color: rgb(245, 102, 100);
  }
}

.td-blog__body {
  svg,
  img {
    margin: 0 auto;
    height: auto;
    width: 100%;
    display: block;
  }
}

.supporters-container {
  display: flex;
  flex-direction: column;
  gap: 60px;
  margin-bottom: 60px;
}

.max-image-width-200px {
  max-width: 200px !important;
}

.sponsor-container {
  padding: 50px;
  color: black;
  h3 {
    background-color: rgb(230, 230, 230);
    margin-bottom: 4px;
    margin-top: 0;
    padding: 10px;
    text-align: center;
    border-radius: 2px;
  }

  .sponsor-item {
    border-radius: 2px;
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgb(230, 230, 230);
    border-bottom: none;
    margin-bottom: 4px;
    min-height: 150px;
    img {
      max-width: 100%;
      max-height: 100px;
    }
  }
  .sponsor-list img {
    display: block;
    margin: 0 auto;
    padding: 10px;
  }
  .sponsor-list {
    display: flex;
    flex-wrap: wrap;
    &__gold,
    &__plat {
      .sponsor-item {
        @include bpMaxXSmall() {
          width: 100%;
          margin-right: 0;
        }
        width: calc(50% - 2px);
        @include bpMinXSmall() {
          padding: 30px;
          &:nth-child(odd) {
            margin-right: 4px;
          }
        }
      }
    }
    &__silver {
      .sponsor-item {
        @include bpMaxXSmall() {
          &:nth-child(odd) {
            margin-right: 4px;
          }
        }
        width: calc(50% - 2px);
        @include bpMinXSmall() {
          padding: 15px;
          margin-right: 4px;
          width: calc(33.33% - 2.66px);
          &:nth-child(3n) {
            margin-right: 0;
          }
        }
      }
    }
  }
}

.sponsor-button-wrapper {
  display: flex;
  justify-content: center;
  width: 100%;
}

.cta-sponsor-and-donate {
  display: flex;
  flex-wrap: wrap;
  padding: 20px;
  padding-bottom: 0px;
  .sponsor-button {
    width: 100%;
    margin-right: 0;
    @include bpMinXSmall() {
      width: calc(50% - 16px);
      &:nth-child(odd) {
        margin-right: 32px;
      }
    }
    // @include bpMinXSmall() {
    //   padding: 15px;
    //   margin-right: 4px;
    //   width: calc(33.33% - 2.66px);
    //   &:nth-child(3n) {
    //     margin-right: 0;
    //   }
    // }
  }
}

.sponsor-button {
  margin-top: 15px;
  max-width: 500px;
  padding: 15px 17px;
  font-size: 18px;
}

.donor-container {
  .donor-block {
    iframe {
      height: auto;
    }
  }
}

.cta-job-btn {
  font-size: 20px;
  font-style: italic;
}

.financial-backers-cta {
  border-bottom: none;
}

.contributors-cta-container {
  margin-top: 20px;
}

